maj accueil et restaurants sans détails

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <h2 class="shrik">Restaurants</h2>
 
-                <a class="resto__card--1" href="#">
+                <a class="resto__card--1" href="pages\resto_la_palette_du_gout.html">
                     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                     <div class="cartouche">
                         <p class="bold">La palette du goût</p>
