--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 <body>
     <header>
         <div class="titre_container">
-            <img src="/images/ohmyfood.png" alt="logo_oh_my_food">
-            <span class="arrow"><i class="fas fa-arrow-left"></i></span>
+            <h1 class="titre">ohmyfood</h1>
+            <!-- <img src="images/ohmyfood.png" alt="logo_oh_my_food"> -->
+            <!-- <span class="arrow"><a href=""><i class="fas fa-arrow-left"></i></a></span> -->
         </div>
 
     </header>
@@ -27,7 +28,7 @@
                 <span class="geo__icon"><i class="fas fa-map-marker-alt"></i></span>
                 <p class="geo__text">Paris, Belleville</p>
             </div>
-            <form>
+            <form class="form_reserv">
                 <div class="reserv">
                     <p class="reserv__cont reserv__cont--bold">Réservez le menu qui</p>
                     <p class="reserv__cont reserv__cont--bold">vous convient</p>
@@ -64,8 +65,8 @@
 
                 <h2 class="shrik">Restaurants</h2>
 
-                <a class="resto__card--1" href="pages\resto_la_palette_du_gout.html">
-                    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <div class="resto__card--1" >
+                    <a href="pages/resto_la_palette_du_gout.html"><img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""></a>
                     <div class="cartouche">
                         <p class="bold">La palette du goût</p>
                         <p>Ménilmontant</p>
@@ -75,10 +76,10 @@
                             <i class=" fas fa-heart checked"></i>                          
                         </label>
                     </div>                
-                </a>
+                </div>
 
-                <a class="resto__card--2" href="#">
-                    <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La Note enchantée">
+                <div class="resto__card--2" >
+                    <a href="pages/resto_la_note_enchantée.html"><img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La Note enchantée"></a>
                     <div class="cartouche">
                         <p class="bold">La Note enchantée</p>
                         <p>Charonne</p>
@@ -88,10 +89,10 @@
                             <i class=" fas fa-heart checked"></i>                          
                         </label>
                     </div>
-                </a>
+                </div>
 
-                <a class="resto__card--3" href="#">
-                    <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                <div class="resto__card--3" >
+                    <a href="pages/resto_a_la_française.html"><img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française"></a>
                     <div class="cartouche">
                         <p class="bold">À la française</p>
                         <p>Cité Rouge</p>
@@ -101,11 +102,11 @@
                             <i class=" fas fa-heart checked"></i>                          
                         </label>
                     </div>
-                </a>
+                </div>
 
-                <a class="resto__card--4" href="#">
-                    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                        alt="Le délice des sens">
+                <div class="resto__card--4" >
+                    <a href="pages/resto_le_délice_des_sens.html"><img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                        alt="Le délice des sens"></a>
                     <div class="cartouche">
                         <p class="bold">Le délice des sens</p>
                         <p>Folie Méricourt</p>
@@ -115,15 +116,15 @@
                             <i class=" fas fa-heart checked"></i>                          
                         </label>
                     </div>
-                </a>
+                </div>
             </div>
         </section>
     </main>
 
-</body>
+
 <footer>
     <h5 class="footer__titre">ohmyfood</h5>
-    <img class="logo_footer" src="./images/ohmyfood@2x.svg">
+    <!-- <img class="logo_footer" src="./images/ohmyfood@2x.svg"> ne pas utiliser les images -->
     <div class="footer_container">
         <p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
         <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
@@ -133,5 +134,5 @@
     </div>
 
 </footer>
-
+</body>
 </html>
