--- a/index.html
+++ b/index.html
@@ -60,60 +60,62 @@
             </div>
         </nav>
         <section id="restaurant">
-
+            <h2 class="shrik">Restaurants</h2>
             <div class="resto">
-
-                <h2 class="shrik">Restaurants</h2>
-
-                <div class="resto__card--1" >
-                    <a href="pages/resto_la_palette_du_gout.html"><img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""></a>
+                <div class="resto__card--1">
+                    <a href="pages/resto_la_palette_du_gout.html"><img
+                            src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""></a>
                     <div class="cartouche">
                         <p class="bold">La palette du goût</p>
                         <p>Ménilmontant</p>
                         <label class="favorite-checkbox">
                             <input type="checkbox" />
                             <i class=" far fa-heart unchecked"></i>
-                            <i class=" fas fa-heart checked"></i>                          
+                            <i class=" fas fa-heart checked"></i>
                         </label>
-                    </div>                
+                    </div>
+
                 </div>
 
-                <div class="resto__card--2" >
-                    <a href="pages/resto_la_note_enchantée.html"><img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La Note enchantée"></a>
+                <div class="resto__card--2">
+                    <a href="pages/resto_la_note_enchantée.html"><img
+                            src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La Note enchantée"></a>
                     <div class="cartouche">
                         <p class="bold">La Note enchantée</p>
                         <p>Charonne</p>
                         <label class="favorite-checkbox">
                             <input type="checkbox" />
                             <i class=" far fa-heart unchecked"></i>
-                            <i class=" fas fa-heart checked"></i>                          
+                            <i class=" fas fa-heart checked"></i>
                         </label>
                     </div>
                 </div>
 
-                <div class="resto__card--3" >
-                    <a href="pages/resto_a_la_française.html"><img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française"></a>
+                <div class="resto__card--3">
+                    <a href="pages/resto_a_la_française.html"><img
+                            src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française"></a>
                     <div class="cartouche">
                         <p class="bold">À la française</p>
                         <p>Cité Rouge</p>
                         <label class="favorite-checkbox">
                             <input type="checkbox" />
                             <i class=" far fa-heart unchecked"></i>
-                            <i class=" fas fa-heart checked"></i>                          
+                            <i class=" fas fa-heart checked"></i>
                         </label>
                     </div>
                 </div>
 
-                <div class="resto__card--4" >
-                    <a href="pages/resto_le_délice_des_sens.html"><img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                        alt="Le délice des sens"></a>
+                <div class="resto__card--4">
+                    <a href="pages/resto_le_délice_des_sens.html"><img
+                            src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="Le délice des sens"></a>
                     <div class="cartouche">
                         <p class="bold">Le délice des sens</p>
                         <p>Folie Méricourt</p>
                         <label class="favorite-checkbox">
                             <input type="checkbox" />
                             <i class=" far fa-heart unchecked"></i>
-                            <i class=" fas fa-heart checked"></i>                          
+                            <i class=" fas fa-heart checked"></i>
                         </label>
                     </div>
                 </div>
@@ -122,17 +124,18 @@
     </main>
 
 
-<footer>
-    <h5 class="footer__titre">ohmyfood</h5>
-    <!-- <img class="logo_footer" src="./images/ohmyfood@2x.svg"> ne pas utiliser les images -->
-    <div class="footer_container">
-        <p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
-        <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
-        <p>Mentions légales</p>
-        <p>Contact</p>
-        <a class="footer footer__mail" href="mailto:adresse@serveur.com">Contact</a>
-    </div>
+    <footer>
+        <h5 class="footer__titre">ohmyfood</h5>
+        <!-- <img class="logo_footer" src="./images/ohmyfood@2x.svg"> ne pas utiliser les images -->
+        <div class="footer_container">
+            <p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
+            <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
+            <p>Mentions légales</p>
+            <p>Contact</p>
+            <a class="footer footer__mail" href="mailto:adresse@serveur.com">Contact</a>
+        </div>
 
-</footer>
+    </footer>
 </body>
+
 </html>
