maj global sur tous fichiers

--- a/pages/resto_le_délice_des_sens.html
+++ b/pages/resto_le_délice_des_sens.html
@@ -29,75 +29,86 @@
         <div class="main_div">
             <form class="form_menu">
                 <section>
-                    <h4>Le délice des sens</h4>
+                    <div class="titre_coeur">
+                        <h4>Le délice des sens</h4>
+                        <label class="favorite-checkbox">
+                            <input type="checkbox" />
+                            <i class=" far fa-heart unchecked"></i>
+                            <i class=" fas fa-heart checked"></i>
+                        </label>
+                    </div>
+                    
                     <h6>ENTRÉES</h6>
+                    <div class="trait_vert"></div>
                     <div class="carte carte__entrees">
                         <p class="bold">Tartare de thon</p>
                         <div class="box__menu">
                             <span class="condiment">Assaisonné au yuzu</span>
-                            <span class="prix bold">25€</span>
+                            <span class="prix">25€</span>
                         </div>
                     </div>
                     <div class="carte carte__entrees">
                         <p class="bold">Bouchée de homard croustillant</p>
                         <div class="box__menu">
                             <span class="condiment">Et sa farandole de petits légumes</span>
-                            <span class="prix bold">35€</span>
+                            <span class="prix">35€</span>
                         </div>
                     </div>
                     <div class="carte carte__entrees">
                         <p class="bold">Velouté de cèpes</p>
                         <div class="box__menu">
                             <span class="condiment">Aux truffes</span>
-                            <span class="prix bold">20€</span>
+                            <span class="prix">20€</span>
                         </div>
                     </div>
                 </section>
                 <section>
                     <h6>PLATS</h6>
+                    <div class="trait_vert"></div>
                     <div class="carte carte__plats">
                         <p class="bold">Poulet rôti aux herbes de Provence</p>
                         <div class="box__menu">
                             <span class="condiment">Et sa crème de truffe</span>
-                            <span class="prix bold">40€</span>
+                            <span class="prix">40€</span>
                         </div>
                     </div>
                     <div class="carte carte__plats">
                         <p class="bold">Langouste rôtie</p>
                         <div class="box__menu">
                             <span class="condiment">Et ses légumes de saison</span>
-                            <span class="prix bold">35€</span>
+                            <span class="prix">35€</span>
                         </div>
                     </div>
                     <div class="carte carte__plats">
                         <p class="bold">Côte de boeuf Angus</p>
                         <div class="box__menu">
                             <span class="condiment">Et sa purée de panais</span>
-                            <span class="prix bold">44€</span>
+                            <span class="prix">44€</span>
                         </div>
                     </div>
                 </section>
                 <section>
                     <h6>DESSERTS</h6>
+                    <div class="trait_vert"></div>
                     <div class="carte carte__desserts">
                         <p class="bold">Farandole de desserts</p>
                         <div class="box__menu">
                             <span class="condiment">Du chef</span>
-                            <span class="prix bold">18€</span>
+                            <span class="prix">18€</span>
                         </div>
                     </div>
                     <div class="carte carte__desserts">
                         <p class="bold">Crème brulée</p>
                         <div class="box__menu">
                             <span class="condiment">Revisitée</span>
-                            <span class="prix bold">22€</span>
+                            <span class="prix">22€</span>
                         </div>
                     </div>
                     <div class="carte carte__desserts">
                         <p class="bold">Tiramisu</p>
                         <div class="box__menu">
                             <span class="condiment">À la noisette</span>
-                            <span class="prix bold">23€</span>
+                            <span class="prix">23€</span>
                         </div>
                     </div>
                 </section>
