maj restocard shadowbox and animation

--- a/pages/resto_la_palette_du_gout.html
+++ b/pages/resto_la_palette_du_gout.html
@@ -40,21 +40,22 @@
 
                     <h6>ENTRÉES</h6>
                     <div class="trait_vert"></div>
-                    <div class="carte carte__entrees">
+                    <div class="carte carte__1">
                         <p class="bold">Fricassée d'escargot</p>
                         <div class="box__menu">
                             <span class="condiment">Au piment d'espelette</span>
                             <span class="prix">25€</span>
+                            <div class="green_val"><i class="fas fa-check-circle"></i></div>
                         </div>
                     </div>
-                    <div class="carte carte__entrees">
+                    <div class="carte carte__2">
                         <p class="bold">Foie gras de canard mi-cuit</p>
                         <div class="box__menu">
                             <span class="condiment">Au piment d'espelette</span>
                             <span class="prix">25€</span>
                         </div>
                     </div>
-                    <div class="carte carte__entrees">
+                    <div class="carte carte__3">
                         <p class="bold">Oeuf au plat</p>
                         <div class="box__menu">
                             <span class="condiment">Au piment d'espelette</span>
