--- a/pages/resto_la_palette_du_gout.html
+++ b/pages/resto_la_palette_du_gout.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="/css/style.css" />
     <!-- <link rel="stylesheet" href="css/fontawesome.css" /> -->
-    <link href="./images/ohmyfood@2x.svg" rel="icon">
-    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.css">
+    <link href="./images/ohmyfood@2x.svg" rel="icon" />
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.css" />
     <title>la palette du gout</title>
 </head>
 
