test liens des pages

--- a/pages/resto_a_la_française.html
+++ b/pages/resto_a_la_française.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- <link rel="stylesheet" href="css/fontawesome.css" /> -->
     <link href="images/ohmyfood@2x.svg" rel="icon">
-    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.css">
+    <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.css">
     <title>À la française</title>
 </head>
 
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="titre_img">
-            <img class="resto_titre_img" src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            <img class="resto_titre_img" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="plat raffiné dans une assiette">
         </div>
         <div class="main_div">
@@ -40,21 +40,21 @@
 
                     <h6>ENTRÉES</h6>
                     <div class="trait_vert"></div>
-                    <div class="carte carte__entrees">
+                    <div class="carte carte__1">
                         <p class="bold">Tartare de poulpe acidulé</p>
                         <div class="box__menu">
                             <span class="condiment">Aux zestes d'orange</span>
                             <span class="prix">25€</span>
                         </div>
                     </div>
-                    <div class="carte carte__entrees">
+                    <div class="carte carte__2">
                         <p class="bold">Velouté de légumes d'antan</p>
                         <div class="box__menu">
                             <span class="condiment">Carotte, panais, topinambour</span>
                             <span class="prix">35€</span>
                         </div>
                     </div>
-                    <div class="carte carte__entrees">
+                    <div class="carte carte__3">
                         <p class="bold">Soupe à l'oignon</p>
                         <div class="box__menu">
                             <span class="condiment">Revisitée</span>
@@ -65,21 +65,21 @@
                 <section>
                     <h6>PLATS</h6>
                     <div class="trait_vert"></div>
-                    <div class="carte carte__plats">
+                    <div class="carte carte__1">
                         <p class="bold">Coquilles Saint-Jacques</p>
                         <div class="box__menu">
                             <span class="condiment">Accompagnées d'une purée de panais</span>
                             <span class="prix">40€</span>
                         </div>
                     </div>
-                    <div class="carte carte__plats">
+                    <div class="carte carte__2">
                         <p class="bold">Magret de canard</p>
                         <div class="box__menu">
                             <span class="condiment">Et parmentier de pommes de terre</span>
                             <span class="prix">35€</span>
                         </div>
                     </div>
-                    <div class="carte carte__plats">
+                    <div class="carte carte__3">
                         <p class="bold">Pigeonneau d’Ille-et-Vilaine</p>
                         <div class="box__menu">
                             <span class="condiment">Sur son lit de gnocchis aux légumes</span>
@@ -90,21 +90,21 @@
                 <section>
                     <h6>DESSERTS</h6>
                     <div class="trait_vert"></div>
-                    <div class="carte carte__desserts">
+                    <div class="carte carte__1">
                         <p class="bold">Pétales de violettes glacés</p>
                         <div class="box__menu">
                             <span class="condiment">Et purée de noisettes</span>
                             <span class="prix">18€</span>
                         </div>
                     </div>
-                    <div class="carte carte__desserts">
+                    <div class="carte carte__2">
                         <p class="bold">Fondant au chocolat</p>
                         <div class="box__menu">
                             <span class="condiment">Revisité</span>
                             <span class="prix">22€</span>
                         </div>
                     </div>
-                    <div class="carte carte__desserts">
+                    <div class="carte carte__3">
                         <p class="bold">Millefeuille croustillant</p>
                         <div class="box__menu">
                             <span class="condiment">Myrtilles et pâte d’amande</span>
