--- a/pages/resto_la_note_enchantée.html
+++ b/pages/resto_la_note_enchantée.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- <link rel="stylesheet" href="css/fontawesome.css" /> -->
     <link href="images/ohmyfood@2x.svg" rel="icon">
     <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.css">
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="titre_img">
-            <img class="resto_titre_img" src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            <img class="resto_titre_img" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="plat raffiné dans une assiette">
         </div>
         <div class="main_div">
@@ -40,28 +40,28 @@
                     
                     <h6>ENTRÉES</h6>
                     <div class="trait_vert"></div>
-                    <div class="carte carte__entrees">
+                    <div class="carte carte__1">
                         <p class="bold">Ravioles de foie gras</p>
                         <div class="box__menu">
                             <span class="condiment">Accompagnés de leur crème à la truffe</span>
                             <span class="prix">25€</span>
                         </div>
                     </div>
-                    <div class="carte carte__entrees">
+                    <div class="carte carte__2">
                         <p class="bold">Caviar osciètre</p>
                         <div class="box__menu">
                             <span class="condiment">Sur blini à la farine de blé noir</span>
                             <span class="prix">35€</span>
                         </div>
                     </div>
-                    <div class="carte carte__entrees">
+                    <div class="carte carte__3">
                         <p class="bold">Homard et espuma de potiron</p>
                         <div class="box__menu">
                             <span class="condiment">Mariné aux zestes d'orange</span>
                             <span class="prix">20€</span>
                         </div>
                     </div>
-                    <div class="carte carte__entrees">
+                    <div class="carte carte__1">
                         <p class="bold">Foie gras de canard cuit entier</p>
                         <div class="box__menu">
                             <span class="condiment">Confiture de figue et pain toasté</span>
@@ -72,21 +72,21 @@
                 <section>
                     <h6>PLATS</h6>
                     <div class="trait_vert"></div>
-                    <div class="carte carte__plats">
+                    <div class="carte carte__1">
                         <p class="bold">Noix de coquilles Saint-Jacques</p>
                         <div class="box__menu">
                             <span class="condiment">Sur lit de purée de céleri-rave</span>
                             <span class="prix">40€</span>
                         </div>
                     </div>
-                    <div class="carte carte__plats">
+                    <div class="carte carte__2">
                         <p class="bold">Langoustine poêlée</p>
                         <div class="box__menu">
                             <span class="condiment">Purée de patate douce</span>
                             <span class="prix">35€</span>
                         </div>
                     </div>
-                    <div class="carte carte__plats">
+                    <div class="carte carte__3">
                         <p class="bold">Mijoté de queue de boeuf</p>
                         <div class="box__menu">
                             <span class="condiment">Et riz sauvage aux zestes de citron</span>
@@ -97,21 +97,21 @@
                 <section>
                     <h6>DESSERTS</h6>
                     <div class="trait_vert"></div>
-                    <div class="carte carte__desserts">
+                    <div class="carte carte__1">
                         <p class="bold">Macaron noisette et chocolat</p>
                         <div class="box__menu">
                             <span class="condiment">Glace au caramel brun et sel de Guérande</span>
                             <span class="prix">18€</span>
                         </div>
                     </div>
-                    <div class="carte carte__desserts">
+                    <div class="carte carte__2">
                         <p class="bold">Baba au rhum revisité</p>
                         <div class="box__menu">
                             <span class="condiment">Avec son coulis de citron</span>
                             <span class="prix">22€</span>
                         </div>
                     </div>
-                    <div class="carte carte__desserts">
+                    <div class="carte carte__3">
                         <p class="bold">Tarte au citron meringuée</p>
                         <div class="box__menu">
                             <span class="condiment">Déstructurée</span>
