--- a/pages/resto_le_délice_des_sens.html
+++ b/pages/resto_le_délice_des_sens.html
@@ -40,21 +40,21 @@
                     
                     <h6>ENTRÉES</h6>
                     <div class="trait_vert"></div>
-                    <div class="carte carte__entrees">
+                    <div class="carte carte__1">
                         <p class="bold">Tartare de thon</p>
                         <div class="box__menu">
                             <span class="condiment">Assaisonné au yuzu</span>
                             <span class="prix">25€</span>
                         </div>
                     </div>
-                    <div class="carte carte__entrees">
+                    <div class="carte carte__2">
                         <p class="bold">Bouchée de homard croustillant</p>
                         <div class="box__menu">
                             <span class="condiment">Et sa farandole de petits légumes</span>
                             <span class="prix">35€</span>
                         </div>
                     </div>
-                    <div class="carte carte__entrees">
+                    <div class="carte carte__3">
                         <p class="bold">Velouté de cèpes</p>
                         <div class="box__menu">
                             <span class="condiment">Aux truffes</span>
@@ -65,21 +65,21 @@
                 <section>
                     <h6>PLATS</h6>
                     <div class="trait_vert"></div>
-                    <div class="carte carte__plats">
+                    <div class="carte carte__1">
                         <p class="bold">Poulet rôti aux herbes de Provence</p>
                         <div class="box__menu">
                             <span class="condiment">Et sa crème de truffe</span>
                             <span class="prix">40€</span>
                         </div>
                     </div>
-                    <div class="carte carte__plats">
+                    <div class="carte carte__2">
                         <p class="bold">Langouste rôtie</p>
                         <div class="box__menu">
                             <span class="condiment">Et ses légumes de saison</span>
                             <span class="prix">35€</span>
                         </div>
                     </div>
-                    <div class="carte carte__plats">
+                    <div class="carte carte__3">
                         <p class="bold">Côte de boeuf Angus</p>
                         <div class="box__menu">
                             <span class="condiment">Et sa purée de panais</span>
@@ -90,21 +90,21 @@
                 <section>
                     <h6>DESSERTS</h6>
                     <div class="trait_vert"></div>
-                    <div class="carte carte__desserts">
+                    <div class="carte carte__1">
                         <p class="bold">Farandole de desserts</p>
                         <div class="box__menu">
                             <span class="condiment">Du chef</span>
                             <span class="prix">18€</span>
                         </div>
                     </div>
-                    <div class="carte carte__desserts">
+                    <div class="carte carte__2">
                         <p class="bold">Crème brulée</p>
                         <div class="box__menu">
                             <span class="condiment">Revisitée</span>
                             <span class="prix">22€</span>
                         </div>
                     </div>
-                    <div class="carte carte__desserts">
+                    <div class="carte carte__3">
                         <p class="bold">Tiramisu</p>
                         <div class="box__menu">
                             <span class="condiment">À la noisette</span>
