--- a/pages/resto_la_palette_du_gout.html
+++ b/pages/resto_la_palette_du_gout.html
@@ -65,21 +65,21 @@
                 <section>
                     <h6>PLATS</h6>
                     <div class="trait_vert"></div>
-                    <div class="carte carte__plats">
+                    <div class="carte carte__1">
                         <p class="bold">Filet de boeuf aux herbes</p>
                         <div class="box__menu">
                             <span class="condiment">Accompagné de sa ribambelle de légumes</span>
                             <span class="prix">40€</span>
                         </div>
                     </div>
-                    <div class="carte carte__plats">
+                    <div class="carte carte__2">
                         <p class="bold">Parmentier de queue de boeuf</p>
                         <div class="box__menu">
                             <span class="condiment">À la truffe noire sur sa purée de panais</span>
                             <span class="prix">35€</span>
                         </div>
                     </div>
-                    <div class="carte carte__plats">
+                    <div class="carte carte__3">
                         <p class="bold">Filet de turbot</p>
                         <div class="box__menu">
                             <span class="condiment">Aux agrumes</span>
@@ -90,21 +90,21 @@
                 <section>
                     <h6>DESSERTS</h6>
                     <div class="trait_vert"></div>
-                    <div class="carte carte__desserts">
+                    <div class="carte carte__1">
                         <p class="bold">Paris-Brest</p>
                         <div class="box__menu">
                             <span class="condiment">Revisité</span>
                             <span class="prix">18€</span>
                         </div>
                     </div>
-                    <div class="carte carte__desserts">
+                    <div class="carte carte__2">
                         <p class="bold">Macaron au chocolat d'exception</p>
                         <div class="box__menu">
                             <span class="condiment">Et glace à la vanille de Madagascar</span>
                             <span class="prix">22€</span>
                         </div>
                     </div>
-                    <div class="carte carte__desserts">
+                    <div class="carte carte__3">
                         <p class="bold">Mousse au chocolat</p>
                         <div class="box__menu">
                             <span class="condiment">Au piment d'Espelette et à la truffe noire</span>
