test des liens pages 2

--- a/pages/resto_la_note_enchantée.html
+++ b/pages/resto_la_note_enchantée.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <!-- <link rel="stylesheet" href="css/fontawesome.css" /> -->
     <link href="images/ohmyfood@2x.svg" rel="icon">
-    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.css">
+    <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.css">
     <title>La note enchantée</title>
 </head>
 
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="titre_img">
-            <img class="resto_titre_img" src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            <img class="resto_titre_img" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="plat raffiné dans une assiette">
         </div>
         <div class="main_div">
