--- a/pages/resto_la_palette_du_gout.html
+++ b/pages/resto_la_palette_du_gout.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" type="text/css"> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" type="text/css"> -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- <link rel="stylesheet" href="css/fontawesome.css" /> -->
-    <link href="./images/ohmyfood@2x.svg" rel="icon" />
-    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.css" />
+    <link href="../images/ohmyfood@2x.svg" rel="icon" />
+    <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.css" />
     <title>la palette du gout</title>
 </head>
 
@@ -17,12 +17,12 @@
     <header>
         <div class="titre_container">
             <h1 class="titre">ohmyfood</h1>
-            <a class="arrow" href="/index.html"><i class="fas fa-arrow-left"></i></a>
+            <a class="arrow" href="./index.html"><i class="fas fa-arrow-left"></i></a>
         </div>
     </header>
     <main>
         <div class="titre_img">
-            <img class="resto_titre_img" src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            <img class="resto_titre_img" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="plat raffiné dans une assiette">
         </div>
         <div class="main_div">
