--- a/pages/resto_a_la_française.html
+++ b/pages/resto_a_la_française.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../css/style.css" />
     <!-- <link rel="stylesheet" href="css/fontawesome.css" /> -->
+    <!-- lien test -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">  
     <link href="../images/ohmyfood@2x.svg" rel="icon">
     <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.css">
     <title>À la française</title>
