--- a/pages/resto_la_palette_du_gout.html
+++ b/pages/resto_la_palette_du_gout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" type="text/css"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="../css/style.css" />
     <!-- <link rel="stylesheet" href="css/fontawesome.css" /> -->
