--- a/pages/resto_le_délice_des_sens.html
+++ b/pages/resto_le_délice_des_sens.html
@@ -18,7 +18,7 @@
     <header>
         <div class="titre_container">
             <h1 class="titre">ohmyfood</h1>
-            <a class="arrow" href="./index.html"><i class="fas fa-arrow-left"></i></a>
+            <a class="arrow" href="../index.html"><i class="fas fa-arrow-left"></i></a>
         </div>
 
     </header>
