--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"> -->
     <link href="./images/ohmyfood@2x.svg" rel="icon">
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
+    <!-- <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css"> -->
     <title>OHMYFOOD-accueil</title>
 </head>
 
@@ -48,7 +49,7 @@
                     <h3 class="purple mobile">Choisissez un restaurant</h3>
                 </a>
                 <a href="#" class="fonction__cont">
-                    <div class="dot ">2</div>
+                    <div class="dot">2</div>
                     <h3 class="purple list">Composez votre menu</h3>
                 </a>
                 <a href="#" class="fonction__cont">
