add files to maj w3c and spinner  correction write

--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
 </head>
 
 <body>
+    <div class="blank">
+    <div class="loading">
+        <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div>
+        <div></div><div></div><div></div><div></div><div></div><div></div></div>
+        </div>
     <header>
         <div class="titre_container">
             <h1 class="titre">ohmyfood</h1>
         </div>
-
+        
     </header>
     <main>
         <aside>
@@ -134,6 +139,7 @@
         </div>
 
     </footer>
+</div>
 </body>
 
 </html>
