ajout des buttons Commander

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <p class="reserv__cont">Découvrez des restaurants d'exception,</p>
                         <p class="reserv__cont"> séléctionnés par nos soins.</p>
                     </div>
-                    <button class="but_sub" type="submit">
+                    <button class="but_sub but_page" type="submit">
                         Explorer nos restaurants
                     </button>
                 </form>
