--- a/pages/resto_a_la_française.html
+++ b/pages/resto_a_la_française.html
@@ -114,9 +114,13 @@
                         </div>
                     </div>
                 </section>
-
-            
-
+                <form class="form_page">
+                    <div class="cont_but_page">
+                        <button class="but_sub but_page" type="submit">
+                            Commander
+                        </button>
+                    </div>
+                </form>
         </div>
     </main>
     <footer>
