--- a/pages/resto_le_délice_des_sens.html
+++ b/pages/resto_le_délice_des_sens.html
@@ -28,7 +28,7 @@
                 alt="plat raffiné dans une assiette">
         </div>
         <div class="main_div">
-            <form class="form_menu">
+            
                 <section>
                     <div class="titre_coeur">
                         <h4>Le délice des sens</h4>
@@ -113,9 +113,13 @@
                         </div>
                     </div>
                 </section>
-
-            </form>
-
+                <form class="form_page">
+                    <div class="cont_but_page">
+                        <button class="but_sub but_page" type="submit">
+                            Commander
+                        </button>
+                    </div>
+                </form>
         </div>
     </main>
     <footer>
