--- a/pages/resto_la_note_enchantée.html
+++ b/pages/resto_la_note_enchantée.html
@@ -120,8 +120,13 @@
                         </div>
                     </div>
                 </section>
-
-            
+                <form class="form_page">
+                    <div class="cont_but_page">
+                        <button class="but_sub but_page" type="submit">
+                            Commander
+                        </button>
+                    </div>
+                </form>
 
         </div>
     </main>
