--- a/pages/resto_la_palette_du_gout.html
+++ b/pages/resto_la_palette_du_gout.html
@@ -27,95 +27,99 @@
                 alt="plat raffiné dans une assiette">
         </div>
         <div class="main_div">
-            <form class="form_menu">
-                <section>
-                    <div class="titre_coeur">
-                        <h4>La palette du goût</h4>
 
-                        <label class="favorite-checkbox">
-                            <input type="checkbox" />
-                            <i class=" far fa-heart unchecked"></i>
-                            <i class=" fas fa-heart checked"></i>
-                        </label>
-                    </div>
+            <section>
+                <div class="titre_coeur">
+                    <h4>La palette du goût</h4>
 
-                    <h6>ENTRÉES</h6>
-                    <div class="trait_vert"></div>
-                    <div class="carte carte__1">
-                        <p class="bold">Fricassée d'escargot</p>
-                        <div class="box__menu">
-                            <span class="condiment">Au piment d'espelette</span>
-                            <span class="prix">25€</span>
-                        </div>
-                    </div>
-                    <div class="carte carte__2">
-                        <p class="bold">Foie gras de canard mi-cuit</p>
-                        <div class="box__menu">
-                            <span class="condiment">Au piment d'espelette</span>
-                            <span class="prix">25€</span>
-                        </div>
-                    </div>
-                    <div class="carte carte__3">
-                        <p class="bold">Oeuf au plat</p>
-                        <div class="box__menu">
-                            <span class="condiment">Au piment d'espelette</span>
-                            <span class="prix">25€</span>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <h6>PLATS</h6>
-                    <div class="trait_vert"></div>
-                    <div class="carte carte__1">
-                        <p class="bold">Filet de boeuf aux herbes</p>
-                        <div class="box__menu">
-                            <span class="condiment">Accompagné de sa ribambelle de légumes</span>
-                            <span class="prix">40€</span>
-                        </div>
-                    </div>
-                    <div class="carte carte__2">
-                        <p class="bold">Parmentier de queue de boeuf</p>
-                        <div class="box__menu">
-                            <span class="condiment">À la truffe noire sur sa purée de panais</span>
-                            <span class="prix">35€</span>
-                        </div>
-                    </div>
-                    <div class="carte carte__3">
-                        <p class="bold">Filet de turbot</p>
-                        <div class="box__menu">
-                            <span class="condiment">Aux agrumes</span>
-                            <span class="prix">44€</span>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <h6>DESSERTS</h6>
-                    <div class="trait_vert"></div>
-                    <div class="carte carte__1">
-                        <p class="bold">Paris-Brest</p>
-                        <div class="box__menu">
-                            <span class="condiment">Revisité</span>
-                            <span class="prix">18€</span>
-                        </div>
-                    </div>
-                    <div class="carte carte__2">
-                        <p class="bold">Macaron au chocolat d'exception</p>
-                        <div class="box__menu">
-                            <span class="condiment">Et glace à la vanille de Madagascar</span>
-                            <span class="prix">22€</span>
-                        </div>
-                    </div>
-                    <div class="carte carte__3">
-                        <p class="bold">Mousse au chocolat</p>
-                        <div class="box__menu">
-                            <span class="condiment">Au piment d'Espelette et à la truffe noire</span>
-                            <span class="prix">23€</span>
-                        </div>
-                    </div>
-                </section>
+                    <label class="favorite-checkbox">
+                        <input type="checkbox" />
+                        <i class=" far fa-heart unchecked"></i>
+                        <i class=" fas fa-heart checked"></i>
+                    </label>
+                </div>
 
+                <h6>ENTRÉES</h6>
+                <div class="trait_vert"></div>
+                <div class="carte carte__1">
+                    <p class="bold">Fricassée d'escargot</p>
+                    <div class="box__menu">
+                        <span class="condiment">Au piment d'espelette</span>
+                        <span class="prix">25€</span>
+                    </div>
+                </div>
+                <div class="carte carte__2">
+                    <p class="bold">Foie gras de canard mi-cuit</p>
+                    <div class="box__menu">
+                        <span class="condiment">Au piment d'espelette</span>
+                        <span class="prix">25€</span>
+                    </div>
+                </div>
+                <div class="carte carte__3">
+                    <p class="bold">Oeuf au plat</p>
+                    <div class="box__menu">
+                        <span class="condiment">Au piment d'espelette</span>
+                        <span class="prix">25€</span>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <h6>PLATS</h6>
+                <div class="trait_vert"></div>
+                <div class="carte carte__1">
+                    <p class="bold">Filet de boeuf aux herbes</p>
+                    <div class="box__menu">
+                        <span class="condiment">Accompagné de sa ribambelle de légumes</span>
+                        <span class="prix">40€</span>
+                    </div>
+                </div>
+                <div class="carte carte__2">
+                    <p class="bold">Parmentier de queue de boeuf</p>
+                    <div class="box__menu">
+                        <span class="condiment">À la truffe noire sur sa purée de panais</span>
+                        <span class="prix">35€</span>
+                    </div>
+                </div>
+                <div class="carte carte__3">
+                    <p class="bold">Filet de turbot</p>
+                    <div class="box__menu">
+                        <span class="condiment">Aux agrumes</span>
+                        <span class="prix">44€</span>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <h6>DESSERTS</h6>
+                <div class="trait_vert"></div>
+                <div class="carte carte__1">
+                    <p class="bold">Paris-Brest</p>
+                    <div class="box__menu">
+                        <span class="condiment">Revisité</span>
+                        <span class="prix">18€</span>
+                    </div>
+                </div>
+                <div class="carte carte__2">
+                    <p class="bold">Macaron au chocolat d'exception</p>
+                    <div class="box__menu">
+                        <span class="condiment">Et glace à la vanille de Madagascar</span>
+                        <span class="prix">22€</span>
+                    </div>
+                </div>
+                <div class="carte carte__3">
+                    <p class="bold">Mousse au chocolat</p>
+                    <div class="box__menu">
+                        <span class="condiment">Au piment d'Espelette et à la truffe noire</span>
+                        <span class="prix">23€</span>
+                    </div>
+                </div>
+            </section>
+            <form class="form_page">
+                <div class="cont_but_page">
+                    <button class="but_sub but_page" type="submit">
+                        Commander
+                    </button>
+                </div>
             </form>
-
         </div>
     </main>
     <footer>
