--- a/pages/resto_a_la_française.html
+++ b/pages/resto_a_la_française.html
@@ -125,11 +125,11 @@
     </main>
     <footer>
         <h5 class="footer__titre">ohmyfood</h5>
+        <!-- <img class="logo_footer" src="./images/ohmyfood@2x.svg"> ne pas utiliser les images -->
         <div class="footer_container">
-            <p><i class="fas fa-utensils"></i>Proposer un restaurant</p>
-            <p><i class="fas fa-hands-helping"></i>Devenir partenaire</p>
-            <p>Mentions légales</p>
-            <p>Contact</p>
+            <p><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></p>
+            <p><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></p>
+            <p><a href="#">Mentions légales</a></p>
             <a class="footer footer__mail" href="mailto:adresse@serveur.com">Contact</a>
         </div>
 
